--- a/style.css
+++ b/style.css
@@ -1,21 +1,33 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     color: #fff;
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
+    background-color: #CFC2A0;
+    /* Kinda solves the problem, but no scrolling */
+    /* overflow-y: hidden; */
 }
 p {
     font-weight: 300;
 }
-h1,h2,h3,h4,h5 {
-    font-weight: 600;
-    letter-spacing: 0.25em;
+a {
+    color: inherit;
 }
 a:hover {
     text-decoration: none;
 }
+h1,h2 {
+    font-weight: 600;
+    letter-spacing: 0.25em;
+}
+svg{
+    fill: #f2f2f2;
+}
 nav{
     background-color: #CFC2A0;
-    position: absolute;
+    position: fixed;
     height: 80px;
     width: 100vw;
     top: 0;
@@ -24,14 +36,40 @@ nav{
     display: flex;
     align-items: center;
 }
+nav ul li a.active{
+    background-color: #CC9355;
+    padding: 16px;
+    border-radius: 5px;
+}
 nav ul{
     list-style: none;
     padding-left: 0;
     margin-bottom: 0;
     margin-left: auto;
 }
-nav ul li{
+.desktopNav li{
     display: inline;
+    padding: 0 0.5em;
+}
+.mobileNav{
+    display: none;
+    position: relative;
+    top: calc(44vh + 96px);
+    left: 100px;
+    height: 100vh;
+    width: 90vw;
+    background-color: #CFC2A0;
+    padding-left: 32px;
+    font-size: 32px;
+    font-weight: 600;
+}
+@media screen and (max-width: 840px){
+    .desktopNav{
+        display: none;
+    }
+    .mobileNav{
+        display: block;
+    }
 }
 nav ul li a{
     color: inherit;
@@ -39,9 +77,28 @@ nav ul li a{
 nav ul li a:hover{
     color: inherit;
 }
+nav img{
+    height: 60px;
+}
+nav img:hover{
+    cursor: pointer;
+}
+#menu{
+    display: none;
+}
+@media screen and (max-width: 840px){
+    #menu{
+        display: block;
+    }
+}
 h2 span{
     border-bottom: 4px #fff solid;
     margin-bottom: 2em;
+}
+@media screen and (max-width: 768px){
+    h2 span{
+        margin-bottom: 1em;
+    }
 }
 h2 {
     padding-bottom: 1em;
@@ -57,7 +114,10 @@ h2 {
     color: #000;
     transition: 0.5s;
 }
-.page1, .page2, .page3, .page4 {
+.container-fluid {
+    height: 100vh;
+}
+#page2, #page3, #page4, #page5, #page6 {
     padding-top: 96px;
 }
 .pageRow {
@@ -68,12 +128,14 @@ h2 {
     align-items: center;
 }
 .pageBottom {
+    padding: 2em 0;
     width: 100%;
     height: 10vh;
     display: flex;
     justify-content: center;
 }
-.page1 {
+#page1 {
+    padding-top: 96px;
     background: linear-gradient(148.73deg, rgba(0, 0, 0, 0) 7.55%, rgba(0, 0, 0, 0.49) 92.71%), url("imgs/backgrounds/background-example.jpg");
     background-size: cover;
     background-repeat: none;
@@ -108,32 +170,80 @@ h2 {
     letter-spacing: 0.25em;
     font-weight: bold;
 }
-.page1 a .white-btn {
+#page1 a .white-btn {
     min-width: 280px;
     font-size: 1.25em;
 }
-.page1 svg{
+#page1 svg{
     fill: #fff;
 }
-.page2{
+#page2{
     background-color: #283035;
 }
-/* .page2 img{
-    max-height: 400px;
+#page2 img{
     padding-bottom: 1em;
-    display: flex;
-} */
-.page3{
+}
+@media screen and (max-width: 768px){
+    #page2 img{
+        max-height: 300px;
+    }
+}
+#page3{
     background-color: #CC9355;
 }
-.page3 img {
+#page3 img {
     height: 320px;
     padding: 32px; 
 }
-.page4{
-    color: #000;
+@media screen and (max-width: 768px){
+    #page3 img {
+        height: 200px;
+    }
 }
-.page4 h2 span{
-    border-bottom: 4px #000 solid;
+#page4{
+    color: #283035;
+}
+#page4 h2 span{
+    border-bottom: 4px #283035 solid;
     margin-bottom: 2em;
+}
+#page4{
+    background-color: #f2f2f2;
+}
+#page4 img{
+    margin: 0 2em 1em 1em;
+    width: 100%;
+    max-width: 210px;
+}
+#page4 svg{
+    fill: #283035;
+}
+#page5{
+    background-color: #283035;
+}
+#page5 img{
+    margin: 0 2em 1em 1em;
+    width: 100%;
+    max-width: 210px;
+    background-color: #f2f2f2;
+    padding: 5px;
+}
+#page6{
+    background-color: #000;
+}
+#page6 a{
+    font-weight: 600;
+}
+#page6 a:hover{
+    color: #CC9355;
+    transition: 0.5s;
+}
+#page6 h2 {
+    color: #CC9355;
+}
+#page6 h2 span{
+    border-color: #CC9355;
+}
+#page6 svg{
+    transform: rotate(180deg);
 }
