--- a/style.css
+++ b/style.css
@@ -87,7 +87,6 @@ nav img:hover{
 #menu{
     display: none;
     margin-left: auto;
-    padding-right: 16px;
     z-index: 4;
 }
 @media screen and (max-width: 840px){
@@ -111,6 +110,7 @@ h2 span{
 }
 @media screen and (max-width: 768px){
     h2 span{
+        font-size: 24px;
         margin-bottom: 1em;
     }
 }
@@ -128,9 +128,22 @@ h2 {
     color: #000;
     transition: 0.5s;
 }
-.container {
-    min-height: 100vh;
+.container-fluid {
     height: 100%;
+    min-height: 100vh;
+    display: -webkit-flex; /* Safari */
+    -webkit-align-items: flex-start; /* Safari 7.0+ */
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+.container-fluid#page4 {
+    min-height: 200vh;
+}
+.container-fluid .row {
+    -webkit-align-self: center; /* Safari 7.0+ */
+    align-self: center;
+    width: 100vw;
 }
 #page2, #page3, #page4, #page5, #page6 {
     padding-top: 60px;
@@ -143,8 +156,8 @@ h2 {
     align-items: center;
 }
 .pageBottom {
-    padding: 2em 0;
-    width: 100%;
+    padding: 1em 0;
+    width: 100vw;
     height: calc(10vh + 30px);
     display: flex;
     justify-content: center;
@@ -186,8 +199,15 @@ h2 {
     font-weight: bold;
 }
 #page1 a .white-btn {
-    min-width: 280px;
-    font-size: 1.25em;
+    min-width: 420px;
+    font-size: 2em;
+    border: 4px solid #fff;
+}
+@media screen and (max-width: 768px){
+    #page1 a .white-btn {
+        min-width: 280px;
+        font-size: 1.5em;
+    }
 }
 #page1 svg{
     fill: #fff;
@@ -196,12 +216,8 @@ h2 {
     background-color: #283035;
 }
 #page2 img{
-    padding-bottom: 1em;
-}
-@media screen and (max-width: 768px){
-    #page2 img{
-        max-height: 300px;
-    }
+    max-height: 720px;
+    padding: 1em;
 }
 #page3{
     background-color: #CC9355;
@@ -242,6 +258,13 @@ h2 {
     background-color: #f2f2f2;
     padding: 5px;
 }
+#page5 .card{
+    color: #283035;
+}
+#page5 .card img{
+    margin: 0;
+    max-width: 100%;    
+}
 #page6{
     background-color: #000;
 }
@@ -268,7 +291,13 @@ h2 {
     border-bottom: 2px solid #CC9355;
     padding: 0;
 }
+.form-control label{
+    color: #495057;
+}
 .form-control:focus{
     background-color: #000;
     border: none;
+}
+input.white-btn{
+    font-size: 1.25em;
 }
