--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ html{
 body{
     color: #fff;
     font-family: 'Poppins', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     overflow-x: hidden;
     background-color: #CFC2A0;
     /* Kinda solves the problem, but no scrolling */
-    /* overflow-y: hidden; */
+    /* overflow-x: hidden; */
 }
 p {
     font-weight: 300;
@@ -71,6 +71,9 @@ nav ul{
     .mobileNav{
         display: block;
     }
+}
+.mobileNav li{
+    padding: 12px 0;
 }
 nav ul li a{
     color: inherit;
@@ -162,6 +165,15 @@ h2 {
     display: flex;
     justify-content: center;
 }
+.pageBottom svg:hover {
+    animation-name: hoverAnim;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+@keyframes hoverAnim{
+    0% { margin-bottom: 20px}
+    100% {margin-top: 20px}
+}
 #page1 {
     padding-top: 60px;
     background: linear-gradient(148.73deg, rgba(0, 0, 0, 0) 7.55%, rgba(0, 0, 0, 0.49) 92.71%), url("imgs/backgrounds/background-example.jpg");
@@ -198,6 +210,11 @@ h2 {
     letter-spacing: 0.25em;
     font-weight: bold;
 }
+@media screen and (max-width: 468px){
+    .quality-list li b {
+        font-size: 1em;
+    }
+}
 #page1 a .white-btn {
     min-width: 420px;
     font-size: 2em;
@@ -219,6 +236,9 @@ h2 {
     max-height: 720px;
     padding: 1em;
 }
+#page2 .col-md-6{
+    opacity: 0;
+}
 #page3{
     background-color: #CC9355;
 }
@@ -231,6 +251,10 @@ h2 {
         height: 200px;
     }
 }
+#page3 .col-md-6{
+    position: relative;
+    right: 100vw;
+}
 #page4{
     color: #283035;
 }
@@ -242,7 +266,7 @@ h2 {
     background-color: #f2f2f2;
 }
 #page4 .card{
-    margin: 0 2em 2em 0;
+    margin: 0 0 2em 0;
     max-width: 300px;
 }
 #page4 svg{
@@ -254,9 +278,15 @@ h2 {
 #page5 img{
     margin: 0 2em 1em 1em;
     width: 100%;
-    max-width: 210px;
+    max-width: 220px;
     background-color: #f2f2f2;
     padding: 5px;
+}
+@media screen and (max-width: 468px){
+    #page5 img{
+        margin: 0 1em 0.5em 0.5em;
+        max-width: 120px;
+    }
 }
 #page5 .card{
     color: #283035;
@@ -267,6 +297,7 @@ h2 {
 }
 #page6{
     background-color: #000;
+    word-wrap: break-word;
 }
 #page6 a{
     font-weight: 600;
@@ -300,4 +331,10 @@ h2 {
 }
 input.white-btn{
     font-size: 1.25em;
+}
+.green{
+    color: green;
+}
+.red{
+    color: red;
 }
